[tool.poetry]
name = "gopro_streamer"
version = "0.1.0"
description = ""
authors = ["Gabri Botha <Angelodeath@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
goprocam = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
